infrastructure/kustomize/bases/hello/policies.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-hello-client
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: hello
  requiredAuthenticationRefs:
    - kind: ServiceAccount
      name: default
      namespace: hello-client
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-prometheus
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: linkerd-metrics
  requiredAuthenticationRefs:
    - kind: ServiceAccount
      name: prometheus
      namespace: monitoring
